# tgbot-gymkhana-ggp

./: .gitignore  Dockerfile  README.md  aio_bot_start.py  app.py  docker-compose.yml  get_info_api.py  plan  pyproject.toml  requirements.txt  restart_server.sh
.github/workflows/: main.yml
DB/: database.py  db_obj.py  models.py
aio_bot/: aio_bot_functions.py  aio_markups.py  config_bot.py
app/: bot_states.py  constants.py  handlers.py  sender.py
app/betting/: handlers.py  models.py  sender.py
bash_scripts/: rebuild_server.sh  rm_containers.sh  tggymkhana_server.sh
etc/: config.yaml
logger/: my_logger.py
tests/: test_bot_fx.py  test_db.py  test_model.py  test_totalizator.py
