[tool.poetry]
name = "mg-bot"
version = "0.1.0"
description = ""
authors = ["Safonov <Sofik.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
pymongo = "^4.8.0"
ruff = "^0.5.0"
poetry-plugin-dotenv = "^2.2.3"
pyyaml = "^6.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
